<resources>
    <string name="app_name">MobileAssignment</string>
    <string name="tab_text_1">Activities</string>
    <string name="tab_text_2">Group Chat</string>

    <string name="activity_fragment">Activity fragment</string>
    <string name="search_activities">search activities</string>
    <string name="search">search</string>
    <string name="popular_activities">All Activities</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="operation_hours">Operation Hours</string>
    <string name="description">Description</string>
    <string name="title_activity_maps">Map</string>
    <string name="join_group_chat">Join Group Chat</string>
    <string name="add_to_my_activities">Add to My Activities</string>
    <string name="search_result_matching">Search result matching</string>
</resources>
