<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activityDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">


        <TextView
            android:id="@+id/eventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="TextView"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view2"
            style="@style/Divider"
            app:layout_constraintBottom_toTopOf="@+id/eventLocation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventName" />

        <View
            android:id="@+id/view5"
            style="@style/Divider"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionDetail" />

        <TextView
            android:id="@+id/eventLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/ic_location_on_black_24dp"
            android:drawablePadding="3dp"
            android:text="@string/location"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventName" />

        <View
            android:id="@+id/view3"
            style="@style/vDivider"
            app:layout_constraintBottom_toTopOf="@+id/eventDescription"
            app:layout_constraintEnd_toStartOf="@+id/tvOperationHours"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/tvLocationDetail"
            app:layout_constraintTop_toBottomOf="@+id/eventName" />

        <TextView
            android:id="@+id/eventOperationHours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:drawableLeft="@drawable/ic_access_time_black_24dp"
            android:drawablePadding="3dp"
            android:text="@string/operation_hours"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/view3"
            app:layout_constraintTop_toTopOf="@+id/eventLocation" />

        <View
            android:id="@+id/view4"
            style="@style/Divider"
            app:layout_constraintBottom_toTopOf="@+id/eventDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationDetail" />

        <TextView
            android:id="@+id/eventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_description_black_24dp"
            android:drawablePadding="3dp"
            android:text="@string/description"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLocationDetail" />

        <Button
            android:id="@+id/joinChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_group_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvLocationDetail"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventLocation"
            app:layout_constraintWidth_percent="0.45" />

        <TextView
            android:id="@+id/tvOperationHours"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventOperationHours"
            app:layout_constraintWidth_percent="0.50" />

        <TextView
            android:id="@+id/tvDescriptionDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/eventDescription" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@+id/joinChat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescriptionDetail"
            tools:context=".MapsActivity" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>